Group Project Commit 1.1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
         <!-- Google Maps API -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCAGsJAJwJD-H4fM9iln-jPNRfgygmpyIo" />
+            android:value="" />
 
         <!-- Alarm receiver -->
         <receiver android:name=".AlarmReceiver" />
